--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "@types/react-dom": "18.2.7",
     "appwrite": "^13.0.0",
     "autoprefixer": "10.4.15",
+    "encoding": "^0.1.13",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
-    "next": "13.4.19",
+    "next": "^13.4.9",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-avatar": "^5.0.3",
