--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "next": "^13.4.9",
+    "openai": "^4.11.0",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-avatar": "^5.0.3",
